@@ -10,7 +10,6 @@ package de.highbyte_le.weberknecht.request.actions;
 
 import java.io.IOException;
 
-import javax.servlet.ServletException;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
 
@@ -29,5 +28,5 @@ public interface ExecutableAction {
 	 * 		if problems during execution occur
 	 */
 	public void execute(HttpServletRequest request, HttpServletResponse response)
-		throws ServletException, IOException, ActionExecutionException, ContentProcessingException;
+		throws IOException, ActionExecutionException, ContentProcessingException;
 }
