@@ -1,7 +1,7 @@
 /*
  * TaskedAction.java
  *
- * Copyright 2007 Patrick Mairif.
+ * Copyright 2009-2010 Patrick Mairif.
  * The program is distributed under the terms of the Apache License (ALv2).
  * 
  * tabstop=4, charset=UTF-8
