@@ -7,6 +7,7 @@ next (1.0):
 	- generic beans removed
 	- ReqUtil removed
 	- AreaCapableRouter now default
+	- actions don't throw ServletExceptions any more.
 
 0.12.2:
 	- bugfix: fixed null pointer exception, when routing didn't match.
